--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <p>&copy; 2024 Maze Game by Alex Ardelean.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
