Refactor project structure

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,6 +16,7 @@
             <canvas id="mazeCanvas"></canvas>
             <div class="controls">
                 <button id="startButton">Start Game</button>
+                <button id="autoWinButton">Auto Win Level</button>
                 <p>Time: <span id="timer">0</span> seconds</p>
                 <p>Level: <span id="level">1</span></p>
             </div>
@@ -38,6 +39,7 @@
         <p>&copy; 2024 Maze Game by Alex Ardelean.</p>
     </footer>
 
-    <script type="module" src="script.js"></script>
+    <!-- Import JavaScript Modules -->
+    <script type="module" src="./game/script.js"></script>
 </body>
 </html>
