--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </header>
 
     <main>
+        <!-- Settings Button -->
+        <button id="settingsButton" class="settings-button"></button>
+
         <div class="container">
             <canvas id="mazeCanvas"></canvas>
             <div class="controls">
@@ -33,6 +36,21 @@
                 </div>
             </div>
         </div>
+
+        <!-- Settings Modal -->
+        <div id="settingsModal" class="modal">
+            <div class="modal-content">
+                <span id="closeSettingsModal" class="close">&times;</span>
+                <h2>Settings</h2>
+                <label for="volumeControl">Volume: <span id="volumeValue">0.5</span></label>
+                <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5">
+                <br>
+                <label for="speedControl" id="speedControlLabel">Player Speed: <span id="speedValue">1</span></label>
+                <input type="range" id="speedControl" min="1" max="4" step="0.1" value="1">
+                <p id="speedWarning" class="warning-text">Changing this value will restart the game</p>
+            </div>
+        </div>
+
     </main>
 
     <footer>
