Rename game to Caveport and add main screen image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maze Game</title>
+    <title>Caveport</title>
     <!-- Bootstrap CSS CDN -->
     <link
       rel="stylesheet"
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="bg-teal text-white text-center py-4">
-        <h1>Maze Game</h1>
+        <h1>Caveport</h1>
     </header>
 
     <main class="position-relative">
@@ -93,7 +93,7 @@
     </main>
 
     <footer class="bg-teal text-white text-center py-2 mt-auto w-100">
-        <p>&copy; 2024 Maze Game by Alex Ardelean.</p>
+        <p>&copy; 2024 Caveport by Alex Ardelean.</p>
     </footer>
 
     <!-- Bootstrap JS, Popper.js, and jQuery CDN -->
